v2/manifest/base/webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canchat-webui-deployment
  namespace: canchat-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canchat-webui-deployment
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: canchat-webui-deployment
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: canchat-webui-pvc
      containers:
        - terminationMessagePath: /dev/termination-log\
          resources: {}
          name: container
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /app/backend/data
          terminationMessagePolicy: File
          image: 'ca.icr.io/canchatapp/open-webui:07-11-24-2'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
