v2/manifest/base/ollama-service-.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: canchat-dev
spec:
  selector:
    app: ollama
  ports:
  - protocol: TCP
    port: 11434
    targetPort: 11434
