v2/manifest/base/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canchat-webui-service
  namespace: canchat-dev
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: canchat-webui-deployment
