v2/manifest/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: canchat-webui-route
  namespace: canchat-dev
spec:
  host: canchat-dev.canchat-ocp-7bd66546f44a6f6d0634d02d2a3736d6-0000.ca-tor.containers.appdomain.cloud
  to:
    kind: Service
    name: canchat-webui-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGMTCCBRmgAwIBAgISAwpGXL5O6JqcctlmvX6gJj4BMA0GCSqGSIb3DQEBCwUA
[...]
      cMB7l1o=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFBjCCAu6gAwIBAgIRAIp9PhPWLzDvI4a9KQdrNPgwDQYJKoZIhvcNAQELBQAw
[...]
      uYkQ4omYCTX5ohy+knMjdOmdH9c7SpqEWBDC86fiNex+O0XOMEZSa8DA
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIJKAIBAAKCAgEAovBidoSMT5FpsWLsFPp8reVSd1p5xzF7VNKW7eT+4uW/n6yT
[...]
      -----END RSA PRIVATE KEY-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
